[package]
name = "blog"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
axum = { version = "0.8.4" }
chrono = { version = "0.4.42", features = ["serde"] }
comrak = { version = "0.41.1" }
rand = { version = "0.9.2" }
# rust-web-common = { path = "../rust-web-common" }
rust-web-common = { git = "https://github.com/corybuecker/rust-web-common", branch = "main" }
serde = { version = "1.0.226", features = ["derive"] }
tera = { version = "1.20.0", features = ["builtins"] }
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
    "process",
] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = { version = "0.1.41" }
xml-builder = { version = "0.5" }
