[package]
name = "blog"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
axum = { version = "0.8.7" }
chrono = { version = "0.4.42", features = ["serde"] }
comrak = { version = "0.48.0" }
rand = { version = "0.9.2" }
# rust-web-common = { path = "../rust-web-common" }
rust-web-common = { git = "https://github.com/corybuecker/rust-web-common", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
    "process",
] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = { version = "0.1.41" }
xml-builder = { version = "0.5" }
